# PyKDialog

./: .gitignore  LICENSE  README.md  dev-requirements.txt  kdialog-help.txt  pyproject.toml  setup.py
PyKDialog/: kdialog.py  kdialog_command.py  kdialog_option.py  test.py
integration_tests/: integration_test_kdialog.py  test_kdialog.py  text-box-testdata-close.txt  text-box-testdata-ok.txt
tests/: test_kdialog.py  test_kdialog_command.py  test_kdialog_option.py
