[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyKDialog"
version = "0.0.1"
authors = [
    { name="Christian Tallner", email="chrtall@gmx.de" },
]
description = "Fluent Python API to create KDialog commands."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["KDialog"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-sugar>=0.9.7",
]

[project.urls]
"Homepage" = "https://github.com/ChrTall/PyKDialog"
"Bug Tracker" = "https://github.com/ChrTall/PyKDialog/issues"
