[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "PyKDialog"
version = "0.0.1"
authors = [
    { name="Christian Tallner", email="chrtall@gmx.de" },
]
description = "Fluent Python API to create KDialog commands."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["KDialog"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]
dev = [
    "pytest",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-sugar>=0.9.7",
    "pyment",
    "sphinx"
]

[project.urls]
"Homepage" = "https://github.com/ChrTall/PyKDialog"
"Bug Tracker" = "https://github.com/ChrTall/PyKDialog/issues"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["PyKDialog*"]
exclude = ["tests*", "integration_tests*"]
